force-app/main/default/objects/Client_Health_Score__c/Client_Health_Score__c.object-meta.xml
<CustomObject>
    <description>Object to track changes in client health score</description>
    <label>Client Health Score</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Client Health Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Health Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>