force-app/main/default/objects/Client_Health_Score__c/fields/Billing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Impact__c</fullName>
    <description>Current Billing Status = 1
Behind Billing Status = -1</description>
    <inlineHelpText>Current Billing Status = 1
Behind Billing Status = -1</inlineHelpText>
    <label>Billing Impact</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>