force-app/main/default/objects/Client_Health_Score__c/fields/Client_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Score__c</fullName>
    <description>Client Health Score stamped when it changes on a Plan</description>
    <inlineHelpText>Client Health Score stamped when it changes on a Plan</inlineHelpText>
    <label>Client Health Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>