force-app/main/default/objects/Client_Health_Score__c/fields/CSAT_Impact__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Impact__c</fullName>
    <description>-1  Most recent CSAT = 1 or 2
0  Most recent CSAT = 3
1  Most recent CSAT = 4 or 5</description>
    <inlineHelpText>-1  Most recent CSAT = 1 or 2
0  Most recent CSAT = 3
1  Most recent CSAT = 4 or 5</inlineHelpText>
    <label>CSAT Impact</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>