force-app/main/default/objects/Client_Health_Score__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <description>Date client health score changed</description>
    <inlineHelpText>Date client health score changed</inlineHelpText>
    <label>Date Recorded</label>
    <required>true</required>
    <type>Date</type>
</CustomField>