force-app/main/default/objects/Client_Health_Score__c/fields/NPS_Impact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Impact__c</fullName>
    <description>-1 = Most recent NPS = 0 to 6
0 = Most recent NPS = 7 or 8
1 = Most recent NPS = 9 or 10</description>
    <inlineHelpText>-1 = Most recent NPS = 0 to 6
0 = Most recent NPS = 7 or 8
1 = Most recent NPS = 9 or 10</inlineHelpText>
    <label>NPS Impact</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>