force-app/main/default/objects/Client_Health_Score__c/fields/Payroll_Impact__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Impact__c</fullName>
    <description>Current Payroll Status = 1
Not Contributing Payroll Status = 0
Behind or Never Contributed Payroll Status = -1</description>
    <inlineHelpText>Current Payroll Status = 1
Not Contributing Payroll Status = 0
Behind or Never Contributed Payroll Status = -1</inlineHelpText>
    <label>Payroll Impact</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>