force-app/main/default/objects/Client_Health_Score__c/fields/Percent_Change__c.field-meta.xml
<CustomField>
    <fullName>Percent_Change__c</fullName>
    <description>% difference of this health metric as compared to the prior month</description>
    <label>Percent Change</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>