force-app/main/default/objects/Client_Health_Score__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Plan the client health score is for</description>
    <inlineHelpText>Plan the client health score is for</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Client Health Scores</relationshipLabel>
    <relationshipName>Client_Health_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>