force-app/main/default/objects/Client_Health_Score__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Status of the plan at the time the Client Health Score was recorded</description>
    <inlineHelpText>Status of the plan at the time the Client Health Score was recorded</inlineHelpText>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Transition Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Abandonment</fullName>
            </value>
            <value>
                <fullName>Status Under Investigation</fullName>
            </value>
            <value>
                <fullName>Frozen Plan</fullName>
            </value>
            <value>
                <fullName>Implementation In Progress</fullName>
            </value>
            <value>
                <fullName>Implementation Stalled</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Status Under Review</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Inquired</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Active Not Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>