force-app/main/default/objects/Client_Health_Score__c/fields/Record_Event__c.field-meta.xml
<CustomField>
    <fullName>Record_Event__c</fullName>
    <description>Monthly Update = Automated recording of Client Health 1st of each month
Live Change = Plan edit triggered change to health</description>
    <inlineHelpText>Monthly Update = Automated recording of Client Health 1st of each month
Live Change = Plan edit triggered change to health</inlineHelpText>
    <label>Record Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Update</fullName>
            </value>
            <value>
                <fullName>Live Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>