force-app/main/default/objects/Client_Health_Score__c/fields/Review_Impact__c.field-meta.xml
<CustomField>
    <fullName>Review_Impact__c</fullName>
    <description>-1 Most recent Review = 1 or 2
0 Most recent Review = 3
1 Most recent Review = 4 or 5</description>
    <inlineHelpText>-1 Most recent Review = 1 or 2
0 Most recent Review = 3
1 Most recent Review = 4 or 5</inlineHelpText>
    <label>Review Impact</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>